# IoT_Midterm_Availability_MQTT

./: .gitignore  PRD.md  README.md  install.sh  package.json  test_pub.sh
.claude/: settings.local.json
broker/: CMakeLists.txt
broker/.cache/clangd/index/: connection_table.h.464DEE91D65C2DBB.idx  connection_table_manager.cpp.08683C13F3BE1C5E.idx  connection_table_manager.h.956DCB8FF0E7593D.idx  core_helpers.h.917A41D994FF6963.idx  edge_helpers.h.5C89E916D38234B0.idx  main.cpp.621D368A84E81B3B.idx  main.cpp.64457F0856264169.idx  main.cpp.E36ABA0C4DD27E25.idx  message.h.80D20F047F6285B6.idx  mqtt_json.cpp.F47943A4419D1CEC.idx  mqtt_json.h.A4ADDFEF0F2974DF.idx  publisher_helpers.h.1B3F482D6D2003F3.idx  test_core_logic.cpp.E7BF9F624367BC2C.idx  test_edge_logic.cpp.0954EF4ADAE9FB5E.idx  test_json.cpp.A975DC5514D835FB.idx  test_publisher_logic.cpp.2220E4FF509D2C1D.idx  uuid.h.49F9F8E9E8510E66.idx
broker/include/: connection_table.h  connection_table_manager.h  core_helpers.h  edge_helpers.h  message.h  mqtt_json.h  publisher_helpers.h  uuid.h
broker/src/common/: connection_table_manager.cpp  mqtt_json.cpp
broker/src/core/: main.cpp
broker/src/edge/: main.cpp
broker/src/publisher/: main.cpp
broker/test/: test_core_logic.cpp  test_edge_logic.cpp  test_json.cpp  test_publisher_logic.cpp
client/: package.json
client/src/: App.css  App.jsx
client/src/components/: TopologyGraph.jsx  topologyGraphModel.js  topologyGraphModel.test.js
client/src/hooks/: useMqtt.js
client/src/mqtt/: eventPresentation.js  eventPresentation.test.js  failover.js  failover.test.js  nodePresentation.js  nodePresentation.test.js  parsers.js  parsers.test.js  topologyVisibility.js  topologyVisibility.test.js
demo/: PRESENTATION_HM_RPI1.md  presentation-hm-rpi1.sh
publisher_client/: package.json  vite.config.js
publisher_client/src/: App.css  App.jsx
test/: README.md  TESTING.md  test_pub.sh
test/core/: 01_bootstrap.sh  02_lwt.sh  04_event_dedup.sh  05_ct_sync.sh  06_core_switch.sh  README.md
test/edge/: 01_ping_pong.sh  03_core_switch.sh  04_ct_active_core_change.sh  05_rtt_relay.sh  README.md
test/edge-cases/: 01_duplicate_event.sh  02_stale_topology.sh  03_invalid_event_uuid.sh  04_missing_priority.sh
test/integration/: 04_edge_lwt_emission.sh  conftest.py  test_02_failover.py  test_05_ct_sync.py  test_06_rtt_relay.py  test_07_publisher_failover.py  test_08_peer_relay.py
test/lib/: common.sh
test/publish/: 01_topology.sh  02_event_intrusion.sh  03_event_motion.sh  04_event_door_forced.sh  05_node_down.sh  06_node_up.sh  07_core_switch.sh  08_core_lwt.sh  90_all_smoke.sh  99_clear_topology.sh
(+6 files in other folders)
